# Face-Segmentation-UNet

./: .gitignore  README.md  analyze_masks.py  config.yaml  count_params.py  infer.py  main.py  pyproject.toml  requirements.txt  train.py  unet_train_portable.py  validate.py
experiments/: config_bisenet.yaml  config_pid.yaml  config_residual_fpn.yaml  config_rnfpn.yaml  env_setup.batch  env_setup.pbs  mask_stats.csv  mask_stats.json  train.batch  train.pbs
src/datasets/: __init__.py  celebamask_dataset.py  transforms.py
src/engine/: __init__.py  evaluator.py  inference.py  trainer.py
src/losses/: boundary.py  dice.py  segmentation_loss.py
src/models/: attention.py  bisenet.py  blocks.py  lightweight_unet.py  pidnet.py
src/utils/: __init__.py  checkpoint.py  class_names.py  class_weights.py  flip_pairs.py  metrics.py  model_outputs.py  palette.py  param_count.py  plotting.py  search_unet_channels.py  seed.py  tta.py
